# pudding-snap

./: .gitattributes  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.trae/rules/: project_rules.md
docs/: TECHNICAL_DESIGN.md
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  bangumi.rs  database.rs  lib.rs  main.rs  models.rs  screenshot.rs  steam.rs  windows_utils.rs
src-tauri/src/commands/: game.rs  migration.rs  mod.rs  screenshot.rs  settings.rs  steam.rs  utils.rs  window.rs
src/components/: AddGameModal.jsx  ErrorBoundary.jsx  GameDetail.jsx  GameList.jsx  ImportModal.jsx  ScreenshotGrid.jsx  ScreenshotModal.jsx  SettingsPanel.jsx  ShareModal.jsx  Sidebar.jsx  TitleBar.jsx  index.js
src/hooks/: useAppState.js  useWindowSize.js
src/i18n/: translations.js
src/styles/: sharedStyles.js  themes.js
