[package]
name = "screenshot-manager"
version = "0.1.0"
description = "Minimal game screenshot manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = ["tray-icon"] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
webp = "0.3"
rdev = "0.5"
rusqlite = { version = "0.32", features = ["chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi"] }
scrap = "0.5"
rodio = "0.19"
