[package]
name = "screenshot-manager"
version = "0.1.0"
description = "Minimal game screenshot manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2.0"
tauri-plugin-dialog = "2.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
webp = "0.3"
rdev = "0.5"
rusqlite = { version = "0.32", features = ["chrono", "bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi", "shellapi", "wingdi", "winnt"] }
rodio = "0.19"
once_cell = "1.19"
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2"
regex = "1"
